[tool.poetry]
name = "chi-server"
version = "0.2.3"
description = ""
authors = ["Dmitriy Vashurin <kapkekes@yandex.ru>"]
readme = "README.md"
packages = [{include = "chi_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "Q"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = false

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
